@@ -7,8 +7,6 @@ It's like a software PLC with ladder logic and panels.
 
 Can communicate with other remote PLCs such as Siemens, Allen Bradley, Modbus and National Instruments.
 
-Requires Java 8 JRE and JDK (both MUST be installed) (Recommend 64bit version).
-
 WebSite : jfcontrols.sourceforge.net
 
 Git : github.com/pquiring/javaforce (under projects/jfcontrols)
